# AlgosC

./: .gitignore  CMakeLists.txt  README.txt  main.c  main.cc
templates/data_structures/: FenwickTree.hpp  LazySegmentTree.hpp  Mint.hpp  RMQ.hpp  SegmentTree.hpp
templates/graph/: Angle.hpp  LineDistance.hpp  LineIntersection.hpp  Point.hpp  SegmentDistance.hpp  SegmentIntersection.hpp  SideOf.hpp
templates/graphs/: BellmanFord.hpp
templates/number_theory/: CRT.hpp  Factor.hpp  FastEratothesnes.hpp  MillerRabin.hpp  ModMulLL.hpp
templates/numerical/: BigInt.hpp  Simplex.hpp
templates/polynomials/: PolyInterpolate.hpp  PolyRoots.hpp  Polynomial.hpp
